@@ -1,4 +1,8 @@
-2008-11-09 Fix a possible EINTR problem in dviread, which might help 
+2008-11-10 Fix handling of c kwarg by scatter; generalize
+           is_string_like to accept numpy and numpy.ma string
+           array scalars. - RM and EF
+
+2008-11-09 Fix a possible EINTR problem in dviread, which might help
            when saving pdf files from the qt backend. - JKS
 
 2008-10-24 Added Jae Joon's fancy arrow, box and annotation
